--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -652,7 +652,7 @@
 </dd>
 
 <dt>Personal use of employer’s automobile or motor vehicle</dt>
-<dd><p id="bx_14_cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using box 14 <strong>and</strong> <a href="#cd_34">code 34</a>.</p> 
+<dd><p id="bx_14_cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee (as a result of their current, previous or intended office or employment) using box 14 <strong>and</strong> <a href="#cd_34">code 34</a>.</p> 
 </dd>
 
 <dt>Interest-free and low-interest loans</dt>
@@ -1111,7 +1111,7 @@
 <dd><strong>Do not</strong> report an amount if the employee <strong>did not</strong> contribute to a plan using box 20.</dd>
 
 <dt>Direct transfers</dt>
-<dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> from an employee's <abbr title="Registered retirement savings plan">RRSP</abbr>.</p></dd>
+<dd><p><strong>Do not</strong> report direct transfers to an <abbr title="Registered pension plan">RPP</abbr> from an employee's <abbr title="Registered retirement savings plan">RRSP</abbr>.</p></dd>
 
 <dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
@@ -1124,14 +1124,14 @@
 </dd>
 
 <dt><abbr title="Retirement compensation arrangement">RCA</abbr> </dt>
-<dd><p>Report the amount if the employee contributed to a <abbr title="Retirement compensation arrangement">RCA</abbr> using box 20.</p>
+<dd><p>Report the amount if the employee contributed to an <abbr title="Retirement compensation arrangement">RCA</abbr> using box 20.</p>
 <p><strong>Do not</strong> report amounts that are not deductible.</p>
 
 <p>You <strong>have</strong> to attach a letter informing the employee of the amounts you reported if the amount in box 20 includes <abbr title="registered pension plan">RPP</abbr> and <abbr title="Retirement compensation arrangement">RCA</abbr> contributions.</p>
 </dd>
 
-<dt><abbr title="Registered pension plan">RPP</abbr> past-services contributions </dt>
-<dd><p>Report the amount your employee contributed to a <abbr title="Registered pension plan">RPP</abbr> if the contributions included current <strong>and</strong> past-services contributions for: </p>
+<dt><abbr title="Registered pension plan">RPP</abbr> past-service contributions </dt>
+<dd><p>Report the amount your employee contributed to an <abbr title="Registered pension plan">RPP</abbr> if the contributions included current <strong>and</strong> past-service contributions for: </p>
 <ul>
             <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
             <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
@@ -1283,7 +1283,7 @@
 
 
 <li class="code-num mrgn-lft-md"><details> <summary>Code 36 – Interest-free and low-interest loans </summary> 
-<p id="cd_36">Report the value of the taxable benefit from an interest-free and low interest loan you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14_cd_36">box 14</a>. </p>
+<p id="cd_36">Report the value of the taxable benefit from an interest-free and low interest loan you provided to your employee (as a result of their current, previous or intended office or employment) using code 36 <strong>and</strong> <a href="#bx_14_cd_36">box 14</a>. </p>
 
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
 </details> 
@@ -1348,7 +1348,7 @@
 
 	
 <li class="code-num mrgn-lft-md"><details><summary>Code 66 – Eligible retiring allowances </summary> 
-<p  id="cd_66">Report eligible retiring allowances using code 66 that you paid in the year to your employee that are eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred. </p>
+<p  id="cd_66">Report eligible retiring allowances using code 66 that you paid in the year to your employee that are eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or a <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -1362,7 +1362,7 @@
 			</li>
 
 <li class="code-num mrgn-lft-md"><details><summary>Code 67 – <span class="nowrap">Non-eligible</span> retiring allowances </summary> 
-<p id="cd_67">Report non-eligible retiring allowances you paid in the year to your employee that were <strong>not</strong> eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
+<p id="cd_67">Report non-eligible retiring allowances you paid in the year to your employee that were <strong>not</strong> eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or a <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -1376,13 +1376,13 @@
 			</li>
 
 <li class="code-num mrgn-lft-md"><details><summary>Code 69 – Indian (exempt income) – Non-eligible retiring allowances  <span class="wb-inv">Keywords: Indians indigenous first nations</span> </summary> 
- <p id="cd_69">Report <strong>only</strong> tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
+ <p id="cd_69">Report <strong>only</strong> tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or a <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>Partly tax-exempt non-eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv"> Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>Partly tax-exempt non-eligible for transfer  to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or a <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv"> Keywords: Indians indigenous first nations</span> <span class="wb-inv"> Keywords: Indians indigenous first nations</span></dt>
 <dd><p>Report the tax-exempt part of the retiring allowances you paid that are not eligible to be transferred using code 69 <strong>and</strong> the taxable part of the non-eligible retiring allowance using <a href="#cd_67">code 67</a>.</p></dd>
-<dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> </dt>
+<dt>Eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or a <abbr title="Pooled registered pension plan">PRPP</abbr> </dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a></p>
@@ -1406,12 +1406,12 @@
 			</li>
 
 <li class="code-num mrgn-lft-md"><details><summary>Code 74 – Past service contributions for 1989 or earlier years while a contributor </summary> 
- <p id="cd_74">Report amounts for past service contributions to a <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while the employee was a contributor using code 74  <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
+ <p id="cd_74">Report amounts for past service contributions to an <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while the employee was a contributor using code 74  <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
             </details> 
 			</li>
 
 <li class="code-num mrgn-lft-md"> <details>  <summary>Code 75 – Past service contributions for 1989 or earlier years while not a contributor </summary> 
-          <p id="cd_75">Report amounts for past service contributions to a <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while the employee was not a contributor using code 75 <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
+          <p id="cd_75">Report amounts for past service contributions to an <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while the employee was not a contributor using code 75 <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
             </details> 
 			</li>
 
@@ -1488,7 +1488,7 @@
  <p id="cd_85">Report the premiums that your employee paid to a private health services plans using code 85.</p>
 <p>The use of code 85 is optional. If you do not use this code, the CRA may ask the recipient to provide supporting documents.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
- <p>This is considered a qualifying medical expense and the recipient can claim the deduction on their income tax and benefit return.</p>
+ <p>This is considered a qualifying medical expense which the recipient may claim as a medical expense tax credit on their income tax and benefit return.</p>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>
             </details> 
 			</li>
