--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
@@ -130,7 +130,7 @@
 
 </div>
 
-<h2>Get SR&amp;ED webinar updates</h2>
+<h2>Get webinar updates</h2>
 	<!--<p>Future SR&amp;ED webinars will be listed as they become available. To receive updates about upcoming webinars and program announcements, sign up to our email list.</p>
 	<p>Subscribe to the <a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED tax incentives email list</a>.</p>-->
 		<p>Future SR&amp;ED webinars will be listed as they become available. Subscribe to the <a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED tax incentives email list</a> to receive updates about upcoming webinars and program announcements.</p>
