--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -209,10 +209,10 @@
 </dd>
 <dt>Group term life insurance benefits</dt><dd>
  <div id="ajax-ex3">
-<p>You must issue a T4A slip if you provide <strong>group term life insurance </strong>benefits if <strong>one </strong>of the following apply:</p>
+<p>You must issue a T4A slip if you provide <strong>group term life insurance </strong>benefits and <strong>one </strong>of the following apply:</p>
 <ul>
-<li>Taxable amount is paid to a <strong>former employee, </strong>you <strong>always </strong>have to issue a T4A slip  </li>
-<li>Taxable amount paid to a <strong>retired </strong>employee is the <strong>only </strong>income reported on the slip and the total is <strong>more than $50 </strong>in the calendar year   </li>
+<li>Where the taxable amount is paid to a <strong>former employee, </strong>you <strong>always </strong>have to issue a T4A slip  </li>
+<li>Where the taxable amount is paid to a <strong>retired </strong>employee, the amount is the <strong>only </strong>income reported on the slip <strong>and</strong> the total is <strong>more than $50 </strong>in the calendar year   </li>
 </ul>
 </div>
 </dd>
@@ -313,7 +313,7 @@
 			<ul class="fa-ul">
 				<li><span class="fas fa-check text-success fa-li"></span>Use an additional T4A slip</li>
 				
-				<li><span class="fas fa-check text-success fa-li"></span>Enter only the recipient's name and address, and the recipients's SIN and name, and fill out the required boxes in the "Other information" area</li>
+				<li><span class="fas fa-check text-success fa-li"></span>Enter only the payer's name, the recipient's name and address, and the recipients' SIN and name, and fill out the required boxes in the "Other information" area</li>
 				<li><span class="fas fa-check text-success fa-li"></span>Report each code, and amount only once.</li>
 				<li><span class="fas fa-times text-danger fa-li"></span>Do not repeat all the data on the additional slip</li>
 			</ul> 
@@ -488,16 +488,16 @@
 <dt>Non-resident services</dt>
 <dd><p>Report amount paid for superannuation or pension benefits as a lump-sum to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada using box 018.</p>
 
-<p>Report lump-sum payments you made for non-resident services transferred to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr> or <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using box 018 <strong>and</strong> <a href="#cd102">code 102</a>.</p>
+<p>Report lump-sum payments you made for non-resident services transferred to an <abbr title="Registered pension plan">RPP</abbr>, an <abbr title="Simplified pension plan">SPP</abbr>, a <abbr title="Pooled registered pension plan">PRPP</abbr> or an <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using box 018 <strong>and</strong> <a href="#cd102">code 102</a>.</p>
 
 <p><strong>Do not</strong> report the payments out of an <abbr title="Employee benefit plan">EBP</abbr> that are <strong>not</strong> payments of superannuation or pension benefits using box 018, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a></p>
 </dd>
 
-<dt>Lump-sum payments out of <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr> accrued to December 31, 1971</dt>
+<dt>Lump-sum payments out of an <abbr title="Registered pension plan">RPP</abbr> and a <abbr title="Deferred profit sharing plan">DPSP</abbr> accrued to December 31, 1971</dt>
 <dd>Report lump-sum payments you made out of a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) and deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
 
 <dt>Direct transfers</dt>
-<dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to a <abbr title="Registered retirement savings plan">RRSP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr>, <abbr title="Registered retirement income fund">RRIF</abbr>, or other <abbr title="Registered pension plan">RPP</abbr>/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19) using box 018, use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151 Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>.</p>
+<dd><p><strong>Do not</strong> report direct transfers of <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to an <abbr title="Registered retirement savings plan">RRSP</abbr>, an <abbr title="Simplified pension plan">SPP</abbr>, a <abbr title="Pooled registered pension plan">PRPP</abbr>, a <abbr title="Registered retirement income fund">RRIF</abbr>, or other <abbr title="Registered pension plan">RPP</abbr>/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19) using box 018, use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151 Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>.</p>
 </dd>
 
 <dt>Amounts not eligible for transfer from a <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
@@ -535,7 +535,7 @@
 				<li class="code-num">  	  
      <details> <summary>Box 020 – Self-employed commissions </summary>
  <p id="bx020">Report the amount of commissions you paid to an independent agent. </p>
-<p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 020.</p>  
+<p> Do <strong>not </strong>include GST/HST or provincial sales taxes in the amount reported in box 020.</p>  
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>         
       </details>
           </li>
@@ -586,7 +586,7 @@
 <dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity using box 024, use <a href="#bx016">box 016</a>.</dd>
 
 <dt>Life insurance policy </dt>
-<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income using the T4a slip, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
+<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section 12.2 of the Income Tax Act using the T4A slip, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
 
 <dt>Non-residents</dt>
 <dd><strong>Do not</strong> report annuity payments to a non-resident using the T4a slip, use the <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</dd>
@@ -624,7 +624,7 @@
 </li>
 <li class="code-num">
  <details> <summary>Code 028 –&nbsp;Other income </summary> 
-  <p id="cd028">Generally, amounts are reported in specific boxes or codes on slips. However, report any other amount that you did not have to report in other boxes or codes of the T4A slip if either:</p>
+  <p id="cd028">Generally, amounts are reported in specific boxes or by using codes on slips. However, report any other amount that you did not have to report in other boxes or by using codes on the T4A slip if either:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">The amount is more than&nbsp;$500</li>
  <li class="cnjnctn-col">You deducted income tax</li> 
@@ -714,7 +714,7 @@
 </li>
 <li class="code-num"> 
  <details >  <summary>Code 037 – Advanced life deferred annuity purchase </summary> 
-  <p id="cd037">Report the total annuity amounts <strong>transferred from a money purchase </strong> <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 037.</p> 
+  <p id="cd037">Report the total annuity amounts <strong>transferred from</strong> an <abbr title="Registered pension plan">RPP</abbr>, a <abbr title="Pool registered pension plan">PRPP</abbr> or a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 037.</p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a <strong>negative amount</strong> in this box.</p> 
 
  <h4>Specific situation </h4>
@@ -734,7 +734,7 @@
    <h4>Specific situation </h4>
 <dl class="dl-horizontal">
 <dt>Payments made to someone else</dt>
-<dd> Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  was deceased using code 040 <strong>and</strong> <a href="#cd122">code 122</a>.</dd>
+<dd> Report the accumulated income payments you made to someone else because the subscriber, the subscriber’s spouse or common-law partner was deceased using code 040 <strong>and</strong> <a href="#cd122">code 122</a>.</dd>
 </dl> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>
 
@@ -757,7 +757,7 @@
 
 <li class="code-num">
  <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j) </summary> 
-  <p id="cd102">Report lump-sum payments you made for non-resident services transferred to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr> or <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using code 102  <strong>and</strong> <a href="#bx018">box 018</a>.</p>
+  <p id="cd102">Report lump-sum payments you made for non-resident services transferred to an <abbr title="Registered pension plan">RPP</abbr>, an <abbr title="Simplified pension plan">SPP</abbr>, a <abbr title="Pooled registered pension plan">PRPP</abbr> or an <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using code 102  <strong>and</strong> <a href="#bx018">box 018</a>.</p>
  </details> 
 </li>
 
@@ -801,7 +801,7 @@
   </li>
 <li class="code-num">
  <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer </summary> 
-  <p id="cd108">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
+  <p id="cd108">Report lump-sum payments you made that you <strong>cannot transfer</strong> from an <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 <h4>Specific situation </h4>
 <dl class="dl-horizontal">
 
@@ -904,7 +904,7 @@
  <details>  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan </summary> 
  <p  id="cd125">Report any disability benefits not paid as a life annuity out of a superannuation or pension plan using code 125.</p> 
  
-<p><strong>Do not</strong> report this amount using box 016.</p> 
+<p><strong>Do not</strong> report this amount in box 016.</p> 
 <h4>Specific situation </h4>
 <dl class="dl-horizontal">
 
@@ -918,7 +918,7 @@
 </li>
 <li class="code-num">
  <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor </summary> 
-  <p id="cd126">Report the amount for past service contributions to a <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while a contributor using code 126  <strong>and</strong> <a href="#cd032">code 032</a></p> 
+  <p id="cd126">Report the amount for past service contributions to an <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while a contributor using code 126  <strong>and</strong> <a href="#cd032">code 032</a></p> 
 
 
 </details> 
@@ -926,9 +926,9 @@
 <li class="code-num">
  <details>  <summary>Code 127 – Veterans' benefits </summary> 
  <p  id="cd127">Report the sum of the following amounts using code 127: </p>
-<ul><li>Amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well being Act (other than an amount determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of the Veterans Well being Act, as modified where applicable, under Part 5 of that Act)</li>
+<ul><li>Amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well-being Act (other than an amount determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of the Veterans Well being Act, as modified where applicable, under Part 5 of that Act)</li>
 <li>Amounts paid in the year that were payable under any of subsections 99(6), 109(1) and 115(5) and sections 124 to 126 of the Veterans Well-being Act</li></ul>
-<p class="mrgn-tp-md"><strong>Do not</strong> report this amount using box 016.</p> 
+<p class="mrgn-tp-md"><strong>Do not</strong> report this amount in box 016.</p> 
  </details> 
  </li>
 <li class="code-num">
@@ -985,7 +985,7 @@
  <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans  </summary> 
  <p  id="cd135">Report the premiums that the recipient paid to a private health services plans of a <strong>former or retired</strong> employee using code 135.</p>
 <p>The use of code 135 is optional. If you do not use this code, the CRA may ask the recipient to provide supporting documents.</p>
-<p>This is considered a qualifying medical expense and the recipient can claim the deduction on their income tax and benefit return. </p>
+<p>This is considered a qualifying medical expense which the recipient may claim medical expense tax credit on their income tax and benefit return.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>	
  </details> 
 </li>
@@ -1071,18 +1071,18 @@
 </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor </summary> 
-<p id="cd162">Report the amount for past service contributions to a <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while not a contributor using code 162  <strong>and</strong> <a href="#cd032">code 032</a></p> 
+<details>  <summary>Code 162 – Pre-1990 Past service contributions while not a contributor </summary> 
+<p id="cd162">Report the amount for past service contributions to an <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while not a contributor using code 162 <strong>and</strong> <a href="#cd032">code 032</a></p> 
 
  </details> 
 </li>
 
 <li class="code-num">
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer </summary> 
- <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
+ <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from an <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 <p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 
-<h4>Specific situation </h4>
+<h4>Specific situations </h4>
 <dl class="dl-horizontal">
 <dt>Current year payments</dt>
 <dd><p><strong>Do not</strong> report the amount of the payments you allocated or reallocated <strong>during the year</strong> under a <abbr title="Deferred profit sharing plan">DPSP</abbr> or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
@@ -1108,7 +1108,7 @@
 </li>
 <li class="code-num">
  <details>  <summary>Code 194 – PRPP payments </summary> 
-  <p  id="cd194">Report the amount of the annuity payments from taxable income or withdrawals from a pooled registered pension plan (<abbr title="Pooled registered pension plan">PRPP</abbr>) at any age using code 194 <strong>and</strong> <a href="#bx024">box 024</a>.</p> 
+  <p  id="cd194">Report the amount of the annuity payments or withdrawals from a pooled registered pension plan (<abbr title="Pooled registered pension plan">PRPP</abbr>) using code 194 <strong>and</strong> <a href="#bx024">box 024</a>.</p> 
  </details> 
 </li>
 <li class="code-num">
