--- a/payroll/file/t4arcaslip.html
+++ b/payroll/file/t4arcaslip.html
@@ -171,7 +171,7 @@
             <h2 id="h-2">When to issue</h2>
             <p>If you are a custodian, you <strong>must</strong> issue a T4A-RCA slip to <strong>each</strong> of the following:</p>
 		   <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> Beneficiary who received a payment from a RCA</li>
+<li class="cnjnctn-col"> A beneficiary who received a distribution payment from an RCA</li>
 		   <li class="cnjnctn-col">A person who sold an interest in an RCA</li></ul>
 
            <p>Depending on the situation, you may also have to issue a T4A-RCA slip for amounts the RCA trust refunded to the employer or the employee.</p>
