--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1265,7 +1265,7 @@
 	
 
 <li class="code-num mrgn-lft-md"><details> <summary>Code 34 – Personal use of employer's automobile or motor vehicle </summary> 
-  <p id="cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14_cd_34">box 14</a>.</p>
+  <p id="cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee (as a result of their current, previous or intended office or employment) using code 34 <strong>and</strong> <a href="#bx_14_cd_34">box 14</a>.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Employee's use of their own vehicle </dt>
@@ -1283,7 +1283,7 @@
 
 
 <li class="code-num mrgn-lft-md"><details> <summary>Code 36 – Interest-free and low-interest loans </summary> 
-<p id="cd_36">Report the value of the taxable benefit from an interest-free and low interest loan you provided to your employee (as a result of their current, previous or intended office or employment) using code 36 <strong>and</strong> <a href="#bx_14_cd_36">box 14</a>. </p>
+<p id="cd_36">Report the value of the taxable benefit from an interest-free and low interest loan you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14_cd_36">box 14</a>. </p>
 
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
 </details> 
