--- a/payroll/file/t4arcaslip.html
+++ b/payroll/file/t4arcaslip.html
@@ -274,7 +274,7 @@
 <details><summary>Box 20 &ndash; Other amounts </summary>
 <p>Report the amount if the RCA trust:</p>
 
- <ul class="list-unstyled cnjnctn-type-and">
+ <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">Disposed of property for consideration less than the fair market value (FMV) of the property </li>
 <li class="cnjnctn-col">Acquired property for consideration greater than the FMV of the property </li>
 <li class="cnjnctn-col">Permitted the RCA trust's property to be used for consideration less than the FMV of such use </li>
