--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -582,7 +582,7 @@
 <dt><abbr title="Variable payment life annuity">VPLA</abbr> </dt>
 <dd><strong>Do not</strong> report annuity payments you made under a variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) using box 024, use <a href="#cd133">code 133</a>.</dd>
 
-<dt>Pension or superannuation</dt>
+<dt>Pension or super-annuation</dt>
 <dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity using box 024, use <a href="#bx016">box 016</a>.</dd>
 
 <dt>Life insurance policy </dt>
