--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -95,7 +95,7 @@
 
     <small>Overview: <a href="what.html">What is a taxable benefit</a></small>
  
-<p>Before you calculate, determine if a benefit is taxable and if you need to deduct CPP, EI and income tax.</p> 
+<p>Before you calculate, determine if a benefit is taxable and if you need to deduct <abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Employment insurance">EI</abbr> and income tax.</p> 
    
               
                   <table id="table" class="wb-tables table table-striped table-hover" data-wb-tables='{"columnDefs": [ { "visible": false, "targets": [ 1 ] } ], "paging": false, "oLanguage": {
