--- a/payroll/calculate/when/gsthstrates.html
+++ b/payroll/calculate/when/gsthstrates.html
@@ -72,8 +72,8 @@
         <ul class="noline">
           <li> <a href="learncpp.html" class="hidden-xs hidden-sm">About the deduction of CPP contributions</a> <a href="learncpp.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of CPP contributions</a> </li>
           <li> <a href="cpprates.html" class="hidden-xs hidden-sm">CPP contribution rates, maximums and exemptions</a> <a href="cpprates.html#gc-document-nav" class="visible-xs visible-sm">CPP contribution rates, maximums and exemptions</a></li>
-  <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP contribution (CPP2) rates and maximums</a> 
-                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP contribution (CPP2) rates and maximums </a> <span class="label label-warning">New - 2024</span>
+ <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second additional CPP contribution (CPP2) rates and maximums</a> 
+                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second additional CPP contribution (CPP2) rates and maximums</a> <span class="label label-warning">New - 2024</span>
                         </li>
 		<li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a> <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a> </li>
           <li> <a href="eirates.html" class="hidden-xs hidden-sm">EI premium rates and maximums</a> <a href="eirates.html#gc-document-nav" class="visible-xs visible-sm">EI premium rates and maximums</a> </li>
