--- a/payroll/calculate/when/cpprates.html
+++ b/payroll/calculate/when/cpprates.html
@@ -72,8 +72,8 @@
 
     <li> <a href="cpprates.html" class="active" aria-current="page">CPP contribution rates, maximums and exemptions</a></li>
 
-         <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP contribution (CPP2) rates and maximums</a> 
-                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP contribution (CPP2) rates and maximums </a> <span class="label label-warning">New - 2024</span>
+       <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second additional CPP contribution (CPP2) rates and maximums</a> 
+                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second additional CPP contribution (CPP2) rates and maximums</a> <span class="label label-warning">New - 2024</span>
                         </li>
 		<li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a> <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a> </li>
           <li> <a href="eirates.html" class="hidden-xs hidden-sm">EI premium rates and maximums</a> <a href="eirates.html#gc-document-nav" class="visible-xs visible-sm">EI premium rates and maximums</a> </li>
