--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -75,7 +75,7 @@
                            <a href="cpprates.html#gc-document-nav" class="visible-xs visible-sm">CPP contribution rates, maximums and exemptions </a>
                         </li> 
 
-         <li> <a href="cpp2rates.html" class="active" aria-current="page">Second CPP contribution (CPP2) rates and maximums</a> <span class="label label-warning">New - 2024</span></li>
+         <li> <a href="cpp2rates.html" class="active" aria-current="page">Second additional CPP contribution (CPP2) rates and maximums</a> <span class="label label-warning">New - 2024</span></li>
 
 		<li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a> <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a> </li>
           <li> <a href="eirates.html" class="hidden-xs hidden-sm">EI premium rates and maximums</a> <a href="eirates.html#gc-document-nav" class="visible-xs visible-sm">EI premium rates and maximums</a> </li>
