--- a/payroll/calculate/how/index.html
+++ b/payroll/calculate/how/index.html
@@ -87,8 +87,8 @@
 			   <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
                         </li>
 			  </li>
-			     <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP deductions (CPP2)</a>
-                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP deductions (CPP2)</a> <span class="label label-warning">New - 2024</span>
+			     <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second additional CPP deductions (CPP2)</a>
+                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second additional CPP deductions (CPP2)</a> <span class="label label-warning">New - 2024</span>
                         </li>    
 
                         <li><a href="ei.html" class="hidden-xs hidden-sm">Calculate EI deductions</a>
@@ -181,7 +181,7 @@
   </li>
 
 <li><h4>
-    <a href="cpp2.html">Calculate second CPP contributions (CPP2) deductions</a>
+    <a href="cpp2.html">Calculate second additional CPP contributions (CPP2) deductions</a>
   </h4>
   <p><span class="label label-warning">New - 2024</span> How to use the CPP2 contributions tables and how to manually calculate the amount to withhold on the CPP2 contributions
   </p>
