--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -86,9 +86,9 @@
                         
                         <li><a href="cpp.html" class="active" aria-current="page">Calculate CPP deductions</a>
                         </li>
-			 <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP deductions (CPP2)</a> 
-                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP deductions (CPP2)</a> <span class="label label-warning">New - 2024</span>  
-                        </li>      
+			<li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second additional CPP deductions (CPP2)</a> 
+                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second additional CPP deductions (CPP2)</a> <span class="label label-warning">New - 2024</span>  
+                        </li>        
 			     
                         <li><a href="ei.html" class="hidden-xs hidden-sm">Calculate EI deductions</a>
                            <a href="ei.html#gc-document-nav" class="visible-xs visible-sm">Calculate EI deductions</a> 
