--- a/subway/fire/2.html
+++ b/subway/fire/2.html
@@ -80,42 +80,38 @@
 <li><a href="link">T3, Statement of Trusts Income Allocations and Designations</a></li>
 <li><a href="link">T3GR, Group Income Tax and Information Return for RRSP, RRIF, RESP, or RDSP Trusts</a></li>
 <li><a href="link">T3P, Employees’ Pension Plan Income Tax Return</a></li>
-<li><a href="link">second item</a></li>	
-<li><a href="link">second item</a></li>	
-<li><a href="link">second item</a></li>
-<li><a href="link">second item</a></li>	
-<li><a href="link">second item</a></li>	
-<li><a href="link">second item</a></li>
-<li><a href="link">second item</a></li>	
-<li><a href="link">second item</a></li>	
-<li><a href="link">second item</a></li>	
-<li><a href="link">second item</a></li>	
-<li><a href="link">second item</a></li>			    
+<li><a href="link">T3PRP, T3 Pooled Registered Pension Pan Tax Return</a></li>	
+<li><a href="link">T3RI, Registered Investment Income Tax Return</a></li>	
+<li><a href="link">T4, Statement of Remuneration Paid</a></li>
+<li><a href="link">T4A, Statement of Pension, Retirement, Annuity, and Other Income</a></li>	
+<li><a href="link">T4A-NR, Statement of Fees, Commissions, or Other Amounts Paid to Non-Residents for Services Rendered in Canada</a></li>	
+<li><a href="link">T1204, Government Service Contract Payments</a></li>
+<li><a href="link">T4RIF, Statement of Income From a Registered Retirement Income Fund</a></li>	
+<li><a href="link">T4RSP, Statement of Registered Retirement Savings Plan Income</a></li>	
+<li><a href="link">T5, Statement of Investment Income</a></li>	
+<li><a href="link">T5007, Statement of Benefits</a></li>	
+<li><a href="link">T5008, Statement of Securities Transactions</a></li>	
+<li><a href="link">T5018, Statement of Contract Payments</a></li>	
+<li><a href="link">T4A(OAS), Statement of Old Age Security</a></li>	
+<li><a href="link">T4A(P), Statement of Canada Pension/Quebec Pension Plan Benefits</a></li>	
+<li><a href="link">T4E, Statement of Employment Insurance Benefits</a></li>	
+<li><a href="link">SAFER, Manitoba Shelter Allowance for Elderly Renters (Rent Assist)</a></li>	
+<li><a href="link">RRSP, Contribution Receipt Filing</a></li>	
+<li><a href="link">T215, Exempt from Certification Past Service Pension Adjustment (PSPA)</a></li>	
+<li><a href="link">TFSA, Tax Free Savings Account</a></li>	
+<li><a href="link">T4FHSA, Tax Free First Home Savings Account</a></li>	
+<li><a href="link">T1061, Canadian Amateur Athletic Trust Group Information Return</a></li>	
+<li><a href="link">T5013, FIN Partnership Financial Return</a></li>	
+<li><a href="link">T5013, Partnership Information Return</a></li>	
+<li><a href="link">T661, Scientific Research and Experimental Development (SR&ED) Expenditures Claim</a></li>	
+<li><a href="link">PRPP, Pooled Registered Pension Plan Information Return</a></li>	
+<li><a href="link">RRSP and RRIF, Non-Qualified Investments Information Return</a></li>	
+<li><a href="link">Part XVIII Information Return, International Exchange of Information on Financial Accounts</a></li>	
+<li><a href="link">Part XIX Information Return, International Exchange of Information on Financial Accounts</a></li>		
+<li><a href="link">Worksheet T2000, Calculation of Tax on Agreements to Acquire Shares (Section 207.1(5) of the Income Tax Act)</a></li>	
+<li><a href="link">T2202, Tuition and enrolment certificate</a></li>				    
 </ul>
-            </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">When to file</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 class="h3">On this page</h2>
-            <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
-            </ul>
-            <h2 id="h-1">Heading A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-2">Heading B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-3">Heading C</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-4">Heading D</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <nav class="gc-subway-pagination">
-               <h2 class="wb-inv">Document navigation</h2>
-               <ul class="pager">
-                  <li class="next"><a href="3.html" rel="next"><span class="wb-inv">Next: </span>Get ready to file</a></li>
-               </ul>
-            </nav>
+            
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
             <script type="text/javascript">
