--- a/subway/fire/3.html
+++ b/subway/fire/3.html
@@ -57,8 +57,9 @@
             });
          </script>
          <main role="main" property="mainContentOfPage" class="container">
-            <nav class="gc-subway provisional">
-               <h1>File electronically: Information returns (tax slips and tax summaries)</h1>
+             <nav class="gc-subway provisional">
+               <h1>File Information Returns Electronically</h1>
+		    <h1 property="name" id="wb-cont" class="gc-thickline">When to file</h1>
                <ul>
                   <li><a href="1.html">What to fill out</a></li>
                   <li><a href="2.html">When to file</a></li>
