--- a/subway/fire/2.html
+++ b/subway/fire/2.html
@@ -59,7 +59,7 @@
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
                <h1>File Information Returns Electronically</h1>
-		    <h1 property="name" id="wb-cont" class="gc-thickline">what to fill out</h1>
+		    <h1 property="name" id="wb-cont" class="gc-thickline">What to fill out</h1>
 		 <p>Information returns contain slips and a summary. Depending on the type of information, you may have to issue more than one type of return.</p>   
              </div>
 		     <h2>What are the benefits of filing electronically?</h2>
