--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -97,7 +97,7 @@
 <p>Before you calculate, determine if a benefit is taxable and if you need to deduct <abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Employment insurance">EI</abbr> and income tax.</p> 
    
   <small>Overview: <a href="what.html">What is a taxable benefit</a></small>
-              <div class="row">
+              <div class="row mrgn-tp-lg">
 	      <div class="col-xs-12">
                   <table id="table" class="wb-tables table table-striped table-hover" data-wb-tables='{"columnDefs": [ { "visible": false, "targets": [ 1 ] } ], "paging": false, "oLanguage": {
                      "sSearch": "Filter by keyword"
